Add basic HTML structure

--- a/index.html
+++ b/index.html
@@ -4,10 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rock Paper Scissors</title>
+    <script src="script.js" defer></script>
   </head>
   <body>
-
-    <script src="script.js"></script>
-    
+    <h1>Choose rock, paper, or scissors</h1>
+    <button id="rock" value="rock">Rock</button>
+    <button id="paper" value="paper">Paper</button>
+    <button id="scissors" value="scissors">Scissors</button>
+    <div>
+      <p id="selection">You chose: -- The House chose:</p>
+      <p id="round-message"></p>
+      <p id="score-text">You: 0 -- The House: 0</p>
+      <p id="winner-text"></p>
+    </div>
   </body>
 </html>
